--- a/tokens/application.json
+++ b/tokens/application.json
@@ -456,7 +456,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 75%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 75%, {config.color.accent.alpha.bg.default})"
             }
           },
           "border": {
@@ -466,7 +466,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 75%, {config.color.accent.alpha.border.default})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 75%, {config.color.accent.alpha.border.default})"
             }
           },
           "fg": {
@@ -492,7 +492,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 60%, {config.color.grey.alpha.bg.default})"
+              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.translucent}, 60%, {config.color.grey.alpha.bg.default})"
             }
           },
           "border": {
@@ -502,7 +502,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.default}, 60%, {config.color.grey.alpha.border.default})"
+              "value": "hsla({config.color.grey.hue.default}, {config.color.grey.saturation.translucent}, 60%, {config.color.grey.alpha.border.default})"
             }
           },
           "fg": {
@@ -528,7 +528,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%, {config.color.neutral.alpha.bg.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 10%, {config.color.neutral.alpha.bg.default})"
             }
           },
           "border": {
@@ -538,7 +538,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 20%, {config.color.neutral.alpha.border.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 20%, {config.color.neutral.alpha.border.default})"
             }
           },
           "fg": {
@@ -564,7 +564,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 75%, {config.color.info.alpha.bg.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.translucent}, 75%, {config.color.info.alpha.bg.default})"
             }
           },
           "border": {
@@ -574,7 +574,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 75%, {config.color.info.alpha.border.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.translucent}, 75%, {config.color.info.alpha.border.default})"
             }
           },
           "fg": {
@@ -600,7 +600,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 75%, {config.color.danger.alpha.bg.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.translucent}, 65%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -610,7 +610,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 75%, {config.color.success.alpha.border.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.translucent}, 75%, {config.color.success.alpha.border.default})"
             }
           },
           "fg": {
@@ -636,7 +636,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 75%, {config.color.danger.alpha.bg.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.translucent}, 75%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -646,7 +646,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 30%, {config.color.warning.alpha.border.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.translucent}, 75%, {config.color.warning.alpha.border.default})"
             }
           },
           "fg": {
@@ -672,7 +672,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.danger.alpha.bg.default})"
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.translucent}, 75%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -682,7 +682,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.danger.alpha.border.default})"
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.translucent}, 75%, {config.color.danger.alpha.border.default})"
             }
           },
           "fg": {
@@ -708,7 +708,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 60%, 0.2)"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 60%, 0.2)"
             },
             "checked": {
               "type": "color",
@@ -722,7 +722,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 60%, 0.3)"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 60%, 0.3)"
             }
           },
           "fg": {
@@ -746,7 +746,7 @@
           "focusRing": {
             "default": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.focusRing.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.translucent}, 75%, {config.color.info.alpha.focusRing.default})"
             }
           }
         },
