update app label dimension

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -192,6 +192,140 @@
             "type": "dimension"
           }
         }
+      },
+      "label": {
+        "height": {
+          "xs": {
+            "value": "{app.dimension.label.height.sm} - 0.5rem",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{app.dimension.label.height.md} - 0.5rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.label.height}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.label.height.md} + 0.5rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.height.lg} + 0.5rem",
+            "type": "dimension"
+          }
+        },
+        "padding": {
+          "xs": {
+            "value": "{app.dimension.label.padding.sm} - 0.25rem",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{app.dimension.label.padding.md} - 0.25rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.label.padding}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.label.padding.md} + 0.25rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.label.padding.lg} + 0.25rem",
+            "type": "dimension"
+          }
+        },
+        "gap": {
+          "xs": {
+            "value": "{app.dimension.control.gap.sm} - 0.125rem",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{app.dimension.control.gap.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.control.gap}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.control.gap.md} + 0.125rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.control.gap.lg} + 0.125rem",
+            "type": "dimension"
+          }
+        },
+        "radius": {
+          "xs": {
+            "value": "{app.dimension.control.radius.sm} - 0.125rem",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{app.dimension.control.radius.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.control.radius}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.control.radius.md} + 0.125rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.control.radius.lg} + 0.125rem",
+            "type": "dimension"
+          }
+        },
+        "border": {
+          "xs": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{config.dimension.control.border}",
+            "type": "dimension"
+          }
+        },
+        "symbol": {
+          "xs": {
+            "value": "{app.dimension.control.symbol.sm} - 0.125rem",
+            "type": "dimension"
+          },
+          "sm": {
+            "value": "{app.dimension.control.symbol.md} - 0.125rem",
+            "type": "dimension"
+          },
+          "md": {
+            "value": "{config.dimension.control.symbol}",
+            "type": "dimension"
+          },
+          "lg": {
+            "value": "{app.dimension.control.symbol.md} + 0.125rem",
+            "type": "dimension"
+          },
+          "xl": {
+            "value": "{app.dimension.control.symbol.lg} + 0.125rem",
+            "type": "dimension"
+          }
+        }
       }
     },
     "color": {
