--- a/tokens/application.json
+++ b/tokens/application.json
@@ -252,11 +252,11 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.label.gap.md} + 0.125rem",
+            "value": "{app.dimension.control.gap.md} + 0.125rem",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.label.gap.lg} + 0.125rem",
+            "value": "{app.dimension.control.gap.lg} + 0.125rem",
             "type": "dimension"
           }
         },
@@ -266,63 +266,63 @@
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.label.radius.md} - 0.125rem",
+            "value": "{app.dimension.control.radius.md} - 0.125rem",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.label.radius}",
+            "value": "{config.dimension.control.radius}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.label.radius.md} + 0.125rem",
+            "value": "{app.dimension.control.radius.md} + 0.125rem",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.label.radius.lg} + 0.125rem",
+            "value": "{app.dimension.control.radius.lg} + 0.125rem",
             "type": "dimension"
           }
         },
         "border": {
           "xs": {
-            "value": "{config.dimension.label.border}",
+            "value": "{config.dimension.control.border}",
             "type": "dimension"
           },
           "sm": {
-            "value": "{config.dimension.label.border}",
+            "value": "{config.dimension.control.border}",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.label.border}",
+            "value": "{config.dimension.control.border}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{config.dimension.label.border}",
+            "value": "{config.dimension.control.border}",
             "type": "dimension"
           },
           "xl": {
-            "value": "{config.dimension.label.border}",
+            "value": "{config.dimension.control.border}",
             "type": "dimension"
           }
         },
         "symbol": {
           "xs": {
-            "value": "{app.dimension.label.symbol.sm} - 0.125rem",
+            "value": "{app.dimension.control.symbol.sm} - 0.125rem",
             "type": "dimension"
           },
           "sm": {
-            "value": "{app.dimension.label.symbol.md} - 0.125rem",
+            "value": "{app.dimension.control.symbol.md} - 0.125rem",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.label.symbol}",
+            "value": "{config.dimension.control.symbol}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.label.symbol.md} + 0.125rem",
+            "value": "{app.dimension.control.symbol.md} + 0.125rem",
             "type": "dimension"
           },
           "xl": {
-            "value": "{app.dimension.label.symbol.lg} + 0.125rem",
+            "value": "{app.dimension.control.symbol.lg} + 0.125rem",
             "type": "dimension"
           }
         }
