update application expressive to strong

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -920,7 +920,7 @@
             },
             "type": "typography"
           },
-          "expressive": {
+          "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.ui}",
               "fontWeight": "{config.fontWeight.semibold}",
@@ -940,7 +940,7 @@
             },
             "type": "typography"
           },
-          "expressive": {
+          "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.semibold}",
@@ -984,7 +984,7 @@
             },
             "type": "typography"
           },
-          "expressive": {
+          "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.uiAlt}",
               "fontWeight": "SemiBold",
@@ -1004,7 +1004,7 @@
             },
             "type": "typography"
           },
-          "expressive": {
+          "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
               "fontWeight": "{config.fontWeight.semibold}",
